--- a/index.html
+++ b/index.html
@@ -8,68 +8,81 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Roboto', sans-serif;
-      background: #1e1e1e;
+      background: url('https://www.dofus.com/themes/dofus/images/bg-home.jpg') no-repeat center center fixed;
+      background-size: cover;
       color: #ddd;
       padding: 20px;
       display: flex;
       justify-content: center;
     }
     .container {
-      background: rgba(51, 51, 51, 0.95);
-      max-width: 1000px;
+      background: rgba(0, 0, 0, 0.85);
+      max-width: 1100px;
       width: 100%;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.7);
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.8);
     }
-    h1 { text-align: center; font-size: 2.5em; color: #fff; margin-bottom: 20px; }
+    h1 {
+      text-align: center;
+      font-size: 3em;
+      color: #ffcc00;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+    }
     form {
       display: flex;
       flex-wrap: wrap;
-      gap: 12px;
-      margin-bottom: 20px;
-      background: rgba(34,34,34,0.8);
-      padding: 15px;
-      border-radius: 6px;
-      border: 1px solid #555;
+      gap: 15px;
+      margin-bottom: 25px;
+      background: rgba(34,34,34,0.9);
+      padding: 20px;
+      border-radius: 10px;
+      border: 2px solid #ffaa00;
     }
     select, input, button {
-      padding: 8px;
-      border: 1px solid #666;
-      border-radius: 4px;
-      background: #444;
-      color: #ddd;
+      padding: 10px;
+      border: 1px solid #ffaa00;
+      border-radius: 6px;
+      background: #222;
+      color: #ffcc00;
       font-size: 1rem;
+      text-transform: uppercase;
     }
     button {
       cursor: pointer;
-      background: #3498db;
-      color: #fff;
-      border: none;
+      background: #ffaa00;
+      color: #222;
       font-weight: bold;
       transition: 0.3s;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
     }
-    button:hover { background: #2980b9; transform: scale(1.05); }
+    button:hover {
+      background: #ff8800;
+      transform: scale(1.1);
+    }
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 10px;
+      margin-top: 20px;
+      background: rgba(34,34,34,0.9);
+      border-radius: 10px;
+      overflow: hidden;
     }
     th, td {
-      border: 1px solid #555;
-      padding: 12px;
+      border: 1px solid #ffaa00;
+      padding: 15px;
       text-align: left;
     }
     th {
-      background: #3498db;
+      background: #ffaa00;
+      color: #222;
       cursor: pointer;
-      color: white;
     }
-    .btn-modifier { background: #f1c40f; color: #111; }
-    .btn-modifier:hover { background: #d4ac0d; }
-    .btn-supprimer { background: #e74c3c; }
-    .btn-supprimer:hover { background: #c0392b; }
-    .btn-proposer { background: #8e44ad; font-size: 1rem; padding: 10px; }
+    .btn-modifier { background: #33cc33; color: #fff; }
+    .btn-modifier:hover { background: #28a428; }
+    .btn-supprimer { background: #cc3333; }
+    .btn-supprimer:hover { background: #a42828; }
+    .btn-proposer { background: #8e44ad; font-size: 1.1rem; padding: 12px; }
   </style>
 </head>
 <body>
@@ -78,17 +91,17 @@
   <h1>Dragodingo</h1>
 
   <form id="createForm">
-    <select id="sexe">
+    <select id="sexe" required>
       <option value="">(Genre)</option>
       <option value="M">Mâle</option>
       <option value="F">Femelle</option>
     </select>
-    <select id="col"></select>
-    <select id="gen"></select>
+    <select id="col" required></select>
+    <select id="gen" required></select>
     <select id="pere"><option value="">(Père)</option></select>
     <select id="mere"><option value="">(Mère)</option></select>
-    <select id="fec"><option value="Non">Non</option><option value="Oui">Oui</option></select>
-    <input type="text" id="nom" placeholder="Nom (lettres/chiffres)" />
+    <select id="fec" required><option value="Non">Non</option><option value="Oui">Oui</option></select>
+    <input type="text" id="nom" placeholder="Nom (lettres/chiffres)" required />
     <button type="button" id="gn">Générer Nom</button>
     <button type="submit">Créer</button>
   </form>
@@ -117,6 +130,15 @@ fillSelect("gen", allGens);
 
 let d = [];
 
+document.getElementById("gn").onclick = () => {
+    const col = document.getElementById("col").value[0] || "X";
+    const gen = document.getElementById("gen").value || "G?";
+    const rnd = Math.floor(Math.random() * 10000);
+    const name = col + gen + rnd;
+    document.getElementById("nom").value = name;
+    navigator.clipboard.writeText(name);
+};
+
 document.getElementById("createForm").onsubmit = e => {
     e.preventDefault();
     const sexe = document.getElementById("sexe").value;
@@ -128,27 +150,10 @@ document.getElementById("createForm").onsubmit = e => {
     const nom = document.getElementById("nom").value.trim();
     if (!sexe || !col || !gen || !nom.match(/^[a-zA-Z0-9]+$/)) return alert("Champs invalides !");
     d.push({ id: d.length + 1, sexe, col, gen, pere, mere, fec, nom });
+    updateParentSelects();
     renderList();
     e.target.reset();
 };
-
-function renderList() {
-    document.getElementById("listBody").innerHTML = d.map(o => `
-        <tr>
-            <td>${o.nom}</td>
-            <td>${o.sexe === "M" ? "Mâle" : "Femelle"}</td>
-            <td>${o.col}</td>
-            <td>${o.gen}</td>
-            <td>${o.pere || "-"}</td>
-            <td>${o.mere || "-"}</td>
-            <td>${o.fec}</td>
-            <td>
-                <button class="btn-modifier" onclick="edit(${o.id})">Modifier</button>
-                <button class="btn-supprimer" onclick="remove(${o.id})">X</button>
-            </td>
-        </tr>
-    `).join("");
-}
 </script>
 
 </body>
